--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,12 @@ android {
                 cppFlags "-frtti -fexceptions"
             }
         }
+        ndk {
+//            moduleName "jniLibs"
+            //选择要添加的对应cpu类型的.so库。
+            //"armeabi", , 'x86', 'x86_64'//, 'mips', 'mips64'
+            abiFilters "arm64-v8a", "armeabi-v7a"
+        }
     }
     buildTypes {
         release {
@@ -27,6 +33,7 @@ android {
             path "CMakeLists.txt"
         }
     }
+
     sourceSets { main { jniLibs.srcDirs = ['src/main/jniLibs/libs'] } }
 }
 
@@ -38,6 +45,14 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.tzutalin.dlib-android-app:dlib:1.0.4'
+
+    //图片选择
+    api 'com.yanzhenjie:album:2.1.3'
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    implementation 'com.github.bumptech.glide:okhttp3-integration:4.8.0'
 }
 repositories {
     maven {
